JumpScript/tests/baselines/reference/dontShowCompilerGeneratedMembers.errors.txt
tests/cases/compiler/dontShowCompilerGeneratedMembers.jump(3,6): error TS1139: Type parameter declaration expected.
tests/cases/compiler/dontShowCompilerGeneratedMembers.jump(4,1): error TS1109: Expression expected.


==== tests/cases/compiler/dontShowCompilerGeneratedMembers.jump (2 errors) ====
    var f: {
        x: number;
        <-
         ~
!!! error TS1139: Type parameter declaration expected.
    };
    ~
!!! error TS1109: Expression expected.